  blocks in the marshaling and dispatch code in the wrong order.
  (This applied only to interfaces with an ["amd"] metadata
  directive.)

- Fixed a bug in the slice2cs code generator:
  
  ["cs:collection"] sequence<Object> S1;
  ["cs:collection"] sequence<Object*> S2;

  Sequences of Object or Object* caused incorrect code to be
  generated if they were marked as "cs:collection".

- Fixed a number of bugs in slice2cs that caused incorrect code to
  be generated if C# keywords were used as Slice identifiers.

- Fixed a bug in slice2cpp that permitted impossible exceptions
  to be received by a client if client and server used Slice
  definitions with mismatched exception specifications. The
  client now correctly receives UnknownUserException if the
  server throws an exception that, according to the client's
  view of the operation, is impossible.

- The documentation has always stated that same-named constructs
  cannot be directly nested inside each other. (For example, a
  module `M' cannot contain a constant named `M'.) The Slice
  compilers did not enforce this correctly up to now for modules
  containing constructs with the same name as the enclosing module.
  This has been fixed and now results in a diagnostic.

- The slice2cpp compiler now deprecates Slice definitions at global
  scope: only modules can be defined at global scope. Everything else
  (constants, classes, interfaces, etc.) must be defined inside a
  module.

  For the time being, the compiler issues a warning for each global
  definition but continues to compile the code. Global non-module
  definitions will elicit a hard error two releases from now.

- Several demos used Slice classes where interfaces were more
  appropriate. This has been fixed.

- Fixed a bug in the Windows IcePack registry project that would 
  cause a compilation error if the registry was compiled before the
  node.

- Fixed a hang in the IcePack registry that would occur if multiple